--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Showcasing an intelligent industrial sensor with technical specifications, applications, and benefits." />
-        <title>Spillangel - Sensotop</title>
-        <link rel="stylesheet" href="styles/global.css" />
+        <meta name="theme-color" content="#1193d4" />
+
+        <title>Spillangel - Sensotop Smart Industrial Sensor</title>
+
+        <!-- SEO description -->
+        <meta
+            name="description"
+            content="Discover Sensotop, Spillangel’s smart industrial sensor. Real-time analysis, high precision, and advanced connectivity for fluid monitoring and industrial process optimization."
+        />
+
+        <!-- Keywords -->
+        <meta
+            name="keywords"
+            content="Spillangel, Sensotop, industrial sensor, smart sensor, leak detection, industrial monitoring, IoT sensor, Industry 4.0, fluid sensor, pressure sensor, level sensor, process monitoring"
+        />
+
+        <!-- Author -->
+        <meta name="author" content="Spillangel" />
+
+        <!-- Open Graph (for social sharing) -->
+        <meta property="og:title" content="Spillangel - Sensotop Smart Industrial Sensor" />
+        <meta
+            property="og:description"
+            content="Sensotop is a smart industrial sensor designed for precision and reliability. Perfect for fluid monitoring, leak detection, and Industry 4.0 applications."
+        />
+        <meta property="og:image" content="https://spillangel.com/images/sensotop-preview.jpg" />
+        <meta property="og:url" content="https://spillangel.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:locale" content="en_US" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Spillangel - Sensotop Smart Industrial Sensor" />
+        <meta
+            name="twitter:description"
+            content="Sensotop, Spillangel’s smart sensor for high-precision industrial monitoring and leak detection."
+        />
+        <meta name="twitter:image" content="https://spillangel.com/images/sensotop-preview.jpg" />
+
+        <!-- Favicon -->
         <link rel="icon" type="image/png" href="icone.png" />
+
+        <!-- Stylesheet -->
+        <link rel="stylesheet" href="styles/global.css" />
     </head>
     <body>
         <div id="root"></div>
