--- a/public/index.html
+++ b/public/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1193d4" />
 
-        <title>Spillangel - Sensotop Smart Industrial Sensor</title>
+        <title>Spillangel - Capteur industriel intelligent Sensotop</title>
 
-        <!-- SEO description -->
+        <!-- Meta description : texte clair, naturel et optimisé -->
         <meta
             name="description"
-            content="Discover Sensotop, Spillangel’s smart industrial sensor. Real-time analysis, high precision, and advanced connectivity for fluid monitoring and industrial process optimization."
+            content="Découvrez Sensotop, le capteur industriel intelligent de Spillangel. Analyse en temps réel, précision optimale et connectivité avancée pour la surveillance des fluides et des processus industriels."
         />
 
-        <!-- Keywords -->
+        <!-- Mots-clés (utile pour certains moteurs secondaires, même si Google l'ignore) -->
         <meta
             name="keywords"
-            content="Spillangel, Sensotop, industrial sensor, smart sensor, leak detection, industrial monitoring, IoT sensor, Industry 4.0, fluid sensor, pressure sensor, level sensor, process monitoring"
+            content="Spillangel, Sensotop, capteur industriel, capteur intelligent, détection de fuite, surveillance industrielle, capteur IoT, industrie 4.0, capteur de fluide, monitoring, capteur de pression, capteur de niveau"
         />
 
-        <!-- Author -->
+        <!-- Auteur -->
         <meta name="author" content="Spillangel" />
 
-        <!-- Open Graph (for social sharing) -->
-        <meta property="og:title" content="Spillangel - Sensotop Smart Industrial Sensor" />
+        <!-- Open Graph pour le partage sur les réseaux sociaux -->
+        <meta property="og:title" content="Spillangel - Capteur industriel intelligent Sensotop" />
         <meta
             property="og:description"
-            content="Sensotop is a smart industrial sensor designed for precision and reliability. Perfect for fluid monitoring, leak detection, and Industry 4.0 applications."
+            content="Sensotop est un capteur industriel intelligent conçu pour la précision et la fiabilité. Idéal pour la surveillance des fluides et la détection de fuites dans l'industrie 4.0."
         />
         <meta property="og:image" content="https://spillangel.com/images/sensotop-preview.jpg" />
         <meta property="og:url" content="https://spillangel.com/" />
         <meta property="og:type" content="website" />
-        <meta property="og:locale" content="en_US" />
+        <meta property="og:locale" content="fr_FR" />
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Spillangel - Sensotop Smart Industrial Sensor" />
+        <meta name="twitter:title" content="Spillangel - Capteur industriel intelligent Sensotop" />
         <meta
             name="twitter:description"
-            content="Sensotop, Spillangel’s smart sensor for high-precision industrial monitoring and leak detection."
+            content="Sensotop, le capteur intelligent de Spillangel pour une surveillance industrielle de précision."
         />
         <meta name="twitter:image" content="https://spillangel.com/images/sensotop-preview.jpg" />
 
         <!-- Favicon -->
         <link rel="icon" type="image/png" href="icone.png" />
 
-        <!-- Stylesheet -->
+        <!-- Feuille de style principale -->
         <link rel="stylesheet" href="styles/global.css" />
     </head>
     <body>
